--- a/Graph_20170930/app/src/main/AndroidManifest.xml
+++ b/Graph_20170930/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
         </activity>
         <activity android:name=".LineChartActivity" />
         <activity android:name=".BarChartActivity" />
-        <activity android:name=".LinearLineChartActivity"></activity>
+        <activity android:name=".LinearLineChartActivity" />
+        <activity android:name=".MultiLine_Activity" />
+        <activity android:name=".AcceLineChartActivity"></activity>
     </application>
 
 </manifest>
